@@ -448,7 +448,7 @@ extern const char *skel[];
 extern int skel_ind;
 extern char *infilename, *outfilename, *headerfilename;
 extern int did_outfilename;
-extern char *prefix, *yyclass;
+extern char *prefix, *yyclass, *extra_type;
 extern int do_stdinit, use_stdout;
 extern char **input_files;
 extern int num_input_files;
