@@ -1,7 +1,7 @@
 /* parse.y - parser for flex input */
 
 %token CHAR NUMBER SECTEND SCDECL XSCDECL NAME PREVCCL EOF_OP
-%token OPTION_OP OPT_OUTFILE OPT_PREFIX OPT_YYCLASS OPT_HEADER
+%token OPTION_OP OPT_OUTFILE OPT_PREFIX OPT_YYCLASS OPT_HEADER OPT_EXTRA_TYPE
 %token OPT_TABLES
 
 %token CCE_ALNUM CCE_ALPHA CCE_BLANK CCE_CNTRL CCE_DIGIT CCE_GRAPH
@@ -196,6 +196,8 @@ option		:  OPT_OUTFILE '=' NAME
 			outfilename = copy_string( nmstr );
 			did_outfilename = 1;
 			}
+		|  OPT_EXTRA_TYPE '=' NAME
+			{ extra_type = copy_string( nmstr ); }
 		|  OPT_PREFIX '=' NAME
 			{ prefix = copy_string( nmstr ); }
 		|  OPT_YYCLASS '=' NAME
